[package]
name = "fleurs_tools"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.10.3", features = ["lua53", "vendored"] }
byteorder = "1.5.0"
anyhow = "1.0.97"
json = "0.12.4"

[target.'cfg(target_os = "windows")'.dependencies]
pdb = "0.8.0"

# Linux 平台特定依赖项
[target.'cfg(target_os = "linux")'.dependencies]
goblin = "0.9.3"

[profile.release]
lto = false
strip = false
# panic = "abort"
